syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "GrpcService1";

package greet;



service Greeter {
  rpc AddPost (AddPostRequest) returns (AddPostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  rpc GetPostById (GetPostByIdRequest) returns (GetPostByIdResponse);
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse);
  rpc AddComment (AddCommentRequest) returns (AddCommentResponse);
  rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentResponse);
  rpc GetCommentById (GetCommentByIdRequest) returns (GetCommentByIdResponse);
}


message AddPostRequest {

  Post post = 1;
}


message UpdatePostRequest {

  Post post = 1;
}


message DeletePostRequest {

  int32 id = 1;
}


message GetPostByIdRequest {

  int32 id = 1;
}


message GetPostsRequest { }

message AddPostResponse {

  bool value = 1;
}


message UpdatePostResponse {

  Post value = 1;
}


message DeletePostResponse {

  int32 value = 1;
}


message GetPostByIdResponse {

  Post value = 1;
}


message GetPostsResponse {

  repeated Post values = 1;
}



message AddCommentRequest {

  Comment comment = 1;
}


message UpdateCommentRequest {

  Comment new_comment = 1;
}


message GetCommentByIdRequest {

  int32 id = 1;
}


message AddCommentResponse {

  bool value = 1;
}


message UpdateCommentResponse {

  Comment value = 1;
}


message GetCommentByIdResponse {

  Comment value = 1;
}

message Post {

  int32 post_id = 1;
  string description = 2;
  string domain = 3;
  google.protobuf.Timestamp date = 4;
  repeated Comment commets = 5;
}


message Comment {

  int32 comment_id = 1;
  string text = 2;
  int32 post_post_id = 3;
  Post post = 4;
}
